FIX icon colours and an incorrect link

--- a/docs/de-de/modules/artikel/pages/import-export-anlage-verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/import-export-anlage-verzeichnis.adoc
@@ -948,7 +948,7 @@ Barcodes manuell mit Varianten verknüpfen:
 ====
 Hast du einen xref:artikel:barcodes.adoc#200[Nummernkreis bestehend aus GTIN 13 Barcodes] gekauft, dann kann plentymarkets deinem Artikel automatisch den nächsten verfügbaren Barcode zuordnen.
 
-Gehe dazu wie oben beschrieben vor. Anstatt den Barcode manuell in das Feld *Code* einzugeben, klicke auf *GTIN generieren* (icon:execute[set=plenty]).
+Gehe dazu wie oben beschrieben vor. Anstatt den Barcode manuell in das Feld *Code* einzugeben, klicke auf *GTIN generieren* (icon:execute[set=plenty, role="darkGrey"]).
 ====
 
 [#260]
@@ -1071,7 +1071,7 @@ Diese Angaben fließen mit in die xref:artikel:preise.adoc#1000[Preiskalkulation
 |====
 |Einstellung |Erläuterung
 
-| icon:calculate_acquisition_pricepng[set=plenty] *Einstandspreis*
+| icon:calculate_acquisition_pricepng[set=plenty, role="darkGrey"] *Einstandspreis*
 |Klicke auf diese Schaltfläche, um den Einstandspreis in brutto und netto zu sehen.
 Der Einstandspreis ist das Ergebnis der Beschaffungskalkulation. Ausgehend vom Rechnungspreis des Lieferanten werden Rabatte und Boni abgezogen. Außerbetriebliche Beschaffungskosten für Transport, Versicherungen, Verpackung werden addiert.
 
@@ -1177,7 +1177,7 @@ Kategorieverknüpfungen werden standardmäßig von der Hauptvariante an den Unte
 Du kannst aber die xref:artikel:vererbung.adoc#[Vererbungsfunktion] deaktivieren, wenn du abweichende Einstellungen für eine Untervariante konfigurieren möchtest.
 
 . Öffne die Untervariante und klicke auf das Tab *Kategorien*.
-. Klicke auf *Vererbung deaktivieren* (icon:item_variation_inheritance[set=plenty]).
+. Klicke auf *Vererbung deaktivieren* (icon:item_variation_inheritance[set=plenty, role="darkGrey"]).
 . Nimm die Kategorieeinstellungen für die Untervariante vor.
 . *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
 ====
