--- a/docs/de-de/modules/artikel/pages/kategorien.adoc
+++ b/docs/de-de/modules/artikel/pages/kategorien.adoc
@@ -185,10 +185,10 @@ xref:willkommen:system-personalisieren.adoc#70[Ungesicherte Änderungen] sind au
 a|Diese Funktion ist veraltet.
 Sie galt nur für den inzwischen veralteten "Callisto" Webshop.
 
-|icon:lang_multilingual[set=plenty]
+|icon:lang_multilingual[set=plenty, role="darkGrey"]
 |Öffnet eine xref:artikel:kategorien.adoc#1500[zweisprachige Ansicht der Kategorie]. Welche zwei Sprachen willst du sehen? Wähle sie aus der Dropdown-Liste oben. Du kannst auch Sprachen anzeigen, für die noch keine Inhalte gespeichert wurden. Die Standard-Sprache muss nicht zwingend geöffnet sein.
 
-|icon:settings_transfer[set=plenty]
+|icon:settings_transfer[set=plenty, role="darkGrey"]
 a|Pflegst du die gleiche Kategorie in mehrere Sprachen oder in mehrere plentyShops? Dieses Symbol überträgt die Kategorie-Einstellungen auf eine andere Mandant- oder Sprachversion.
 
 . Wähle die Optionen (icon:check-square[role="blue"]), die übertragen werden sollen.
@@ -457,13 +457,13 @@ image::artikel:Kategorie-Kontextmenue.png[]
 | icon:pencil[role="darkGrey"] *Kategorie bearbeiten*
 |Öffnet die Kategorie, um sie weiterzubearbieten.
 
-| icon:ticket_folder_move[set=plenty] *Kategorie verschieben*
+| icon:ticket_folder_move[set=plenty, role="darkGrey"] *Kategorie verschieben*
 |Verschiebt die Kategorie, z.B. von einer Hauptkategorie in eine Unterkategorie. Willst du auch bestimmen, welche Kategorie als erstes, zweites, drittes usw angezeigt wird? Ändere dazu die xref:artikel:kategorien.adoc#intable-position[Positionsnummer].
 
-| icon:copy[set=plenty] *Kategorie kopieren*
+| icon:copy[set=plenty, role="darkGrey"] *Kategorie kopieren*
 |Erstellt eine Kopie der Kategorie. Verwende diese Funktion, z.B. wenn du eine ähnliche Kategorie an anderer Stelle benötigst. Dazu die Kategorie mit sämtlichen Einstellungen kopieren und anschließend einzelne Optionen wie Namen, Beschreibung und Position anpassen.
 
-| icon:item_plus[set=plenty] *Neuen Artikel erstellen*
+| icon:item_plus[set=plenty, role="darkGrey"] *Neuen Artikel erstellen*
 |Öffnet die xref:artikel:neue-artikel.adoc#200[Eingabemaske zum manuellen Anlegen eines neuen Artikels].
 
 | icon:minus-circle[role="darkGrey"] *Kategorie löschen*
@@ -600,7 +600,7 @@ In der mehrsprachigen Ansicht bearbeitest du zwei Sprachen gleichzeitig.
 
 . Öffne das Menü *Artikel » Kategorien*.
 . Öffne die Kategorie, für die du eine Sprachvariante erstellen möchtest.
-. Klicke auf das Symbol *Multilingualität* (icon:lang_multilingual[set=plenty]). +
+. Klicke auf das Symbol *Multilingualität* (icon:lang_multilingual[set=plenty, role="darkGrey"]). +
 → Die mehrsprachige Ansicht der Kategorie wird in einem neuen Tab geöffnet. +
 . Wähle Sprachen aus den Dropdown-Listen links und rechts.
 Beispiel: Deutsch rechts und Englisch links.
