--- a/docs/de-de/modules/artikel/pages/markierungen.adoc
+++ b/docs/de-de/modules/artikel/pages/markierungen.adoc
@@ -143,7 +143,7 @@ Personen mit xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#10[Backen
 . Dann öffnet sie das Benutzerkonto und aktiviert das Recht:
 * *Einrichtung > Tag*.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
-. Sollte das Problem weiterhin bestehen, wende dich an die link:https://forum.plentymarkets.com/c/aenderungshistorie/604[Supporter im Forum^].
+. Sollte das Problem weiterhin bestehen, wende dich an die link:https://forum.plentymarkets.com/c/item/18[Supporter im Forum^].
 
 --
 
