--- a/docs/de-de/modules/artikel/pages/suchverhalten.adoc
+++ b/docs/de-de/modules/artikel/pages/suchverhalten.adoc
@@ -92,7 +92,7 @@ Dies ist z.B. sinnvoll, nachdem du die Konfiguration geändert hast.
 . Öffne das Menü *Einrichtung » Artikel » Suche » Backend » Suchindex*.
 . Speichere die Einstellungen im Tab *Standard-Index* oder *Erweiterter Index*.
 . Wechsele zurück in das Tab *Übersicht*.
-. Klicke auf *Artikelsuchindex aufbauen* (icon:execute[set=plenty]). +
+. Klicke auf *Artikelsuchindex aufbauen* (icon:execute[set=plenty, role="darkGrey"]). +
 → Pro Durchlauf werden maximal 3000 Artikel indiziert.
 Wenn du also mehr als 3000 Artikel hast, musst du mehrmals auf den Button klicken.
 
@@ -135,6 +135,6 @@ Die Übersicht im Menü *Einrichtung » Artikel » Suche » Backend » Suchindex
 |Hier siehst du die Anzahl der Artikel im plentymarkets System. Die Zahl schließt neu importierte und noch nicht indizierte Artikel ein.
 
 
-| *Artikelsuchindex aufbauen* (icon:execute[set=plenty])
+| *Artikelsuchindex aufbauen* (icon:execute[set=plenty, role="darkGrey"])
 |Klicken Sie auf diesen Button, um den xref:artikel:suchverhalten.adoc#400[Suchindex manuell aufzubauen].
 |====
