--- a/docs/de-de/modules/artikel/pages/verfuegbarkeit.adoc
+++ b/docs/de-de/modules/artikel/pages/verfuegbarkeit.adoc
@@ -122,7 +122,7 @@ Wenn du die Verfügbarkeit für viele Varianten speichern möchtest, dann empfie
 include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-gruppenfunktion]
 
 . Aktiviere die Option mit den Symbolen 1-10 (icon:check-square[role="blue"]) und wähle die passende Verfügbarkeitsstufe (icon:dot-circle-o[role="blue"]).
-. Klicke auf icon:execute[set=plenty] *Ausführen*, um die Einstellungen an den Varianten vorzunehmen.
+. Klicke auf icon:execute[set=plenty, role="darkGrey"] *Ausführen*, um die Einstellungen an den Varianten vorzunehmen.
 
 [discrete]
 ===== Stapelverarbeitung
@@ -130,7 +130,7 @@ include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-gruppenf
 include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
 
 . Aktiviere rechts die Option mit den Symbolen 1-10 (icon:check-square[role="blue"]) und wähle die passende Verfügbarkeitsstufe (icon:dot-circle-o[role="blue"]).
-. Klicke auf icon:execute[set=plenty] *Anwenden*, um die Einstellungen an den Varianten vorzunehmen.
+. Klicke auf icon:execute[set=plenty, role="darkGrey"] *Anwenden*, um die Einstellungen an den Varianten vorzunehmen.
 
 --
 ====
