--- a/docs/en-gb/modules/item/pages/attributes.adoc
+++ b/docs/en-gb/modules/item/pages/attributes.adoc
@@ -251,7 +251,7 @@ Deleting variations linked to an attribute:
 . Click on *Variation group function*. +
 → The *Variation group function* window opens.
 . In the *Procedures* area, select the option *Delete variations* (icon:check-square[role="blue"]).
-. Click on icon:execute[set=plenty] *Execute*. +
+. Click on icon:execute[set=plenty, role="darkGrey"] *Execute*. +
 → The variations are deleted. +
 → The attribute can now be deleted.
 
