--- a/docs/en-gb/modules/item/pages/categories.adoc
+++ b/docs/en-gb/modules/item/pages/categories.adoc
@@ -185,10 +185,10 @@ You can recognise xref:welcome:customise-system.adoc#70[unsaved changes] because
 a|This function is out-dated.
 It only applied to the old "Callisto" shop.
 
-|icon:lang_multilingual[set=plenty]
+|icon:lang_multilingual[set=plenty, role="darkGrey"]
 |Opens xref:item:categories.adoc#1500[the category in two different languages]. Which two languages do you want to see? Select them from the drop-down list at the top of the screen. You can also choose a language that doesn’t have any content yet. You do not necessarily have to open the default language.
 
-|icon:settings_transfer[set=plenty]
+|icon:settings_transfer[set=plenty, role="darkGrey"]
 a|Do you manage the same category in several different languages or in several plentyShops? This symbol transfers the category’s settings to a different client or language version.
 
 . Choose the options (icon:check-square[role="blue"]) that should be transferred.
@@ -457,13 +457,13 @@ image::item:category-context-menu.png[]
 | icon:pencil[role="darkGrey"] *Edit category*
 |Opens the category and lets you edit it further.
 
-| icon:ticket_folder_move[set=plenty] *Move category*
+| icon:ticket_folder_move[set=plenty, role="darkGrey"] *Move category*
 |Moves the category, e.g. from a main category to a sub-category. Do you want to control which category is displayed first, second, third, etc? Simply change the xref:item:categories.adoc#intable-position[position number].
 
-| icon:copy[set=plenty] *Copy category*
+| icon:copy[set=plenty, role="darkGrey"] *Copy category*
 |Creates a copy of the category. Use this function, e.g. to create a similar category somewhere else. Copy the category with all of its settings and then make changes to individual options like the name, description and position.
 
-| icon:item_plus[set=plenty] *Create new item*
+| icon:item_plus[set=plenty, role="darkGrey"] *Create new item*
 |Opens the xref:item:new-item.adoc#200[menu where you can manually create a new item].
 
 | icon:minus-circle[role="darkGrey"] *Delete category*
@@ -600,7 +600,7 @@ Use the multilingual editor to edit two languages at once.
 
 . Go to *Item » Category*.
 . Open whichever category you want to create a language version for.
-. Click on the *Multilingualism* icon (icon:lang_multilingual[set=plenty]). +
+. Click on the *Multilingualism* icon (icon:lang_multilingual[set=plenty, role="darkGrey"]). +
 → The multilingual category view opens in a new tab. +
 . Select languages from the drop-down lists on the left and right.
 Example: English on the right and German on the left.
