--- a/docs/en-gb/modules/item/pages/manufacturers.adoc
+++ b/docs/en-gb/modules/item/pages/manufacturers.adoc
@@ -234,7 +234,7 @@ Deleting links to the manufacturer:
 → The *Item group function* window opens.
 . Select the *Manufacturers* option (icon:check-square[role="blue"]) in the *Global* area.
 . Select the empty option from the drop-down list.
-. Click on icon:execute[set=plenty] *Execute*. +
+. Click on icon:execute[set=plenty, role="darkGrey"] *Execute*. +
 → The manufacturer links are deleted. +
 → The manufacturers can now be deleted.
 
