--- a/docs/en-gb/modules/item/pages/search-behaviour.adoc
+++ b/docs/en-gb/modules/item/pages/search-behaviour.adoc
@@ -92,7 +92,7 @@ This is useful, e.g. after you’ve changed the configuration.
 . Go to *Setup » Item » Search » Backend » Search index*.
 . Save the settings in the tab *Default index* or *Extended index*.
 . Switch back to the *Overview* tab.
-. Click on *Set up an item search index* (icon:execute[set=plenty]). +
+. Click on *Set up an item search index* (icon:execute[set=plenty, role="darkGrey"]). +
 → A maximum of 3000 items are indexed per cycle.
 So if you have more than 3000 items, you’ll need to click on the button multiple times.
 
@@ -135,6 +135,6 @@ The overview in the menu *Setup » Item » Search » Backend » Search index* sh
 |Here you’ll see the number of items in your plentymarkets system. The figure includes newly imported and not yet indexed items.
 
 
-| *Set up an item search index* (icon:execute[set=plenty])
+| *Set up an item search index* (icon:execute[set=plenty, role="darkGrey"])
 |Click on this button to xref:item:search-behaviour.adoc#400[manually build the search index].
 |====
