--- a/docs/en-gb/modules/item/pages/search.adoc
+++ b/docs/en-gb/modules/item/pages/search.adoc
@@ -253,7 +253,7 @@ a|Do you want to search for xref:item:combining-products.adoc#[item bundles] or 
 a|Do you want to search for items that are part of a listing or an auction?
 
 * *Yes* = The search results will only include items that are part of a listing or an auction, i.e. items with a xref:item:search.adoc#800[yellow listing symbol] (icon:listings_show[set=plenty, role="yellow"]).
-* *No* = The search results will only include items that are not part of a listing or an auction, i.e. items with a xref:item:search.adoc#800[grey listing symbol] (icon:listings_show[set=plenty]).
+* *No* = The search results will only include items that are not part of a listing or an auction, i.e. items with a xref:item:search.adoc#800[grey listing symbol] (icon:listings_show[set=plenty, role="darkGrey"]).
 * *Auction (yes)* = The search results will only include items that are part of an auction. This means that xref:markets:ebay-setup.adoc#3500[the *Type* option was set to *Auction*].
 * *Shop item / fixed price (yes)* = The search results will only include items that are part of a listing. This means that xref:markets:ebay-setup.adoc#3500[the *Type* option was set to *Fixed price* or *Shop item*].
 * *ALL* = The search results will include items that are part of a listing and items that are not part of a listing. This is the default setting.
