--- a/docs/en-gb/modules/item/pages/serial-numbers.adoc
+++ b/docs/en-gb/modules/item/pages/serial-numbers.adoc
@@ -24,7 +24,7 @@ Manually entering serial numbers:
 
 . Go to *Item » Edit item*.
 . xref:item:search.adoc#100[Search for] and open the item.
-. In the upper row of symbols, click on the *Serial numbers* symbol (icon:item_serial_number[set=plenty]). +
+. In the upper row of symbols, click on the *Serial numbers* symbol (icon:item_serial_number[set=plenty, role="darkGrey"]). +
 → The *Serial numbers* window opens.
 . Enter a serial number in the *New serial numbers* area.
 . *Save* (icon:save[set=plenty, role="green"]) the serial number or press the enter key to save the serial number.
@@ -54,7 +54,7 @@ Searching for serial numbers:
 
 . Go to *Item » Edit item*.
 . xref:item:search.adoc#100[Search for] and open the item.
-. In the upper row of symbols, click on the *Serial numbers* symbol (icon:item_serial_number[set=plenty]). +
+. In the upper row of symbols, click on the *Serial numbers* symbol (icon:item_serial_number[set=plenty, role="darkGrey"]). +
 → The *Serial numbers* window opens.
 . Use the *Status* drop-down list to specify whether you want to search for all, free or used serial numbers.
 . *_Optional_*: Enter the serial number into the search field.
