--- a/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
+++ b/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
@@ -115,7 +115,7 @@ a|In welche Kategorie soll der Artikel einsortiert werden?
 . Erweitere die Einträge (icon:chevron-right[role="darkGrey"]) und wähle alle Kategorien (icon:check-square[role="blue"]), in denen dieser Artikel erscheinen soll.
 . Klicke auf *Übernehmen*. +
 → Die gewählten Kategorien werden als Tabelle dargestellt.
-Klicke auf icon:delete[set=material], um eine Kategorie aus dieser Liste zu entfernen, oder klicke auf icon:pencil[role="darkGrey"] *Kategorien wählen*, um weitere Kategorien hinzuzufügen.
+Klicke auf icon:delete[set=material, role="darkGrey"], um eine Kategorie aus dieser Liste zu entfernen, oder klicke auf icon:pencil[role="darkGrey"] *Kategorien wählen*, um weitere Kategorien hinzuzufügen.
 
 *_Hinweis_*: Diese Liste enthält nur die xref:artikel:kategorien.adoc#[Kategorien], die du bereits in plentymarkets angelegt hast.
 
@@ -151,7 +151,7 @@ Das heißt, die Hauptvariante kann Attribute besitzen, muss es aber nicht.
 . Erweitere die Attribute (icon:chevron-right[role="darkGrey"]) und wähle die Attributwerte (icon:check-square[role="blue"]), die du für die Hauptvariante verwenden willst, z.B. die Größe "klein" und die Farbe "rot".
 . Klicke auf *Übernehmen*. +
 → Die gewählten Attributwerte werden als Tabelle dargestellt.
-Klicke auf icon:delete[set=material], um einen Attributwert aus dieser Liste zu entfernen, oder klicke auf icon:pencil[role="darkGrey"] *Attribute wählen*, um weitere Attributwerte hinzuzufügen.
+Klicke auf icon:delete[set=material, role="darkGrey"], um einen Attributwert aus dieser Liste zu entfernen, oder klicke auf icon:pencil[role="darkGrey"] *Attribute wählen*, um weitere Attributwerte hinzuzufügen.
 
 *_Hinweis_*: Diese Liste enthält nur die xref:artikel:attribute.adoc#[Attribute und Werte], die du bereits in plentymarkets angelegt hast.
 
@@ -302,10 +302,10 @@ Schau dir eine Vorschau des Artikels an und finde heraus, wo du noch weitere Pro
 [.instruction]
 Vorschau des Artikels ansehen:
 
-. Klicke auf *Produkt Link* (icon:open_in_new[set=material]) in der Toolbar. +
+. Klicke auf *Produkt Link* (icon:open_in_new[set=material, role="darkGrey"]) in der Toolbar. +
 → Ein Pop-Up Fenster wird geöffnet.
 . Nimm die Einstellungen vor.
-. Klicke auf icon:open_in_new[set=material] *Öffnen*. +
+. Klicke auf icon:open_in_new[set=material, role="darkGrey"] *Öffnen*. +
 → Eine Vorschau des Artikels wird angezeigt.
 
 [TIP]
@@ -322,7 +322,7 @@ Der Produkt-Link Button befindet sich in der Toolbar der Artikel- und Variantena
 | *URL*
 |Die URL des Produkts wird oben in einer Info-Box angezeigt.
 Klicke auf die URL, um die Seite in einem neuen Tab zu öffnen.
-Klicke auf icon:copy[set=plenty], um die URL in die Zwischenablage zu kopieren.
+Klicke auf icon:copy[set=plenty, role="darkGrey"], um die URL in die Zwischenablage zu kopieren.
 
 | *Verkaufskanal*
 |Möchtest du eine Vorschau des Produkts in deinem plentyShop oder auf Amazon sehen?
