--- a/docs/de-de/modules/artikel/pages/detailansicht.adoc
+++ b/docs/de-de/modules/artikel/pages/detailansicht.adoc
@@ -59,7 +59,7 @@ image::artikel:detailansicht-neue-ansicht.gif[]
 [#400]
 === Ein Raster erstellen
 
-. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]).
+. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty, role="darkGrey"]).
 . Füge Zeilen und Spalten hinzu, um ein Raster zu erstellen.
 .. Klicke auf icon:ellipsis-v[role="blue"] und dann auf icon:plus[role="darkGrey"] *Zeile hinzufügen*.
 .. Klicke auf *Spalte hinzufügen* (icon:plus[role="darkGrey"]).
@@ -137,7 +137,7 @@ image::artikel:detailansicht-eigene-portlets.png[]
 . Speichere die Ansicht (icon:save[set=plenty, role="darkGrey"]) und schließe den Bearbeitungsmodus (icon:close[role="darkGrey"]).
 . Prüfe das Ergebnis im Hauptfenster.
 . Falls erforderlich:
-.. Klicke nochmal auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]) und passe die Ansicht weiter an.
+.. Klicke nochmal auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty, role="darkGrey"]) und passe die Ansicht weiter an.
 .. Erlaube anderen Benutzern, die Ansicht zu sehen.
 
 image::artikel:bearbeitung-abschliessen.png[]
@@ -160,13 +160,13 @@ image::artikel:bearbeitung-abschliessen.png[]
 Der Name der aktuell geöffneten Ansicht wird angezeigt.
 Klicke auf icon:caret-down[role="darkGrey"], um zu einer anderen Ansicht zu wechseln oder eine xref:artikel:detailansicht.adoc#300[neue Ansicht] zu erstellen.
 
-| icon:items_incoming_history[set=plenty]
+| icon:items_incoming_history[set=plenty, role="darkGrey"]
 |Setzt die Ansicht auf den Stand zurück, der beim letzten Speichern vorhanden war.
 
 | icon:save[set=plenty, role="darkGrey"]
 |Speichert die Änderungen, die an der Ansicht vorgenommenen wurden.
 
-| icon:close[set=plenty]
+| icon:close[set=plenty, role="darkGrey"]
 |Schließt den Bearbeitungsmodus.
 Falls nicht gespeicherte Änderungen vorhanden sind, wird eine Sicherheitsabfrage angezeigt.
 |====
@@ -181,8 +181,8 @@ Du kannst den Zugriff auf jede Ansicht einzeln gewähren bzw. einschränken.
 .*Benutzer*
 --
 
-. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]).
-. Klicke auf icon:open_external_link[set=plenty] *Rechteverwaltung*.
+. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty, role="darkGrey"]).
+. Klicke auf icon:open_external_link[set=plenty, role="darkGrey"] *Rechteverwaltung*.
 . Wähle *Benutzer*, um den Zugang für einen bestimmten Benutzer zu gewähren. +
 → Das Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer* öffnet sich in einem neuen Tab.
 . Suche (icon:search[role=blue]) und öffne das betreffende Benutzerkonto.
@@ -198,8 +198,8 @@ xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#112[Weitere Informatio
 .*Rollen*
 --
 
-. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]).
-. Klicke auf icon:open_external_link[set=plenty] *Rechteverwaltung*.
+. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty, role="darkGrey"]).
+. Klicke auf icon:open_external_link[set=plenty, role="darkGrey"] *Rechteverwaltung*.
 . Wähle *Rollen*, um den Zugang für eine ganze Benutzerrolle zu gewähren. +
 → Das Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Rollen* öffnet sich in einem neuen Tab.
 . Suche (icon:search[role=blue]) und öffne die betreffende Benutzerrolle.
