--- a/docs/de-de/modules/artikel/pages/neue-artikel.adoc
+++ b/docs/de-de/modules/artikel/pages/neue-artikel.adoc
@@ -257,7 +257,7 @@ Varianten erstellen:
 . Klicke auf icon:plus[role="green"] *Neu*. +
 → Das Fenster *Neue Variante erstellen* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte <<table-create-variations>>. +
-. Klicke auf icon:execute[set=plenty] *Varianten erstellen*. +
+. Klicke auf icon:execute[set=plenty, role="darkGrey"] *Varianten erstellen*. +
 → Die Varianten werden erstellt und in der Übersicht angezeigt.
 
 [[table-create-variations]]
@@ -274,7 +274,7 @@ a|Varianten unterscheiden sich durch die Menge und/oder Einheit.
 *_Vorgehensweise_*:
 
 . Gib die Menge und Einheit der ersten Variante ein, z.B. 100ml.
-. Klicke auf icon:execute[set=plenty] *Varianten erstellen*.
+. Klicke auf icon:execute[set=plenty, role="darkGrey"] *Varianten erstellen*.
 . Wiederhole den Vorgang für 250ml und für 500ml.
 
 | *Attribute*
@@ -286,7 +286,7 @@ a|Varianten unterscheiden sich durch die Attributwerte.
 
 . Wähle die Farben und Größen (icon:check-square[role="blue"]).
 . Schaue unten rechts und vergewissere dich, dass die Anzahl der *Kombinationen* korrekt zu sein scheint. Z.B. die Farben grün und blau kombiniert mit den Größen S, M, L ergeben 6 Varianten.
-. Klicke auf icon:execute[set=plenty] *Varianten erstellen*.
+. Klicke auf icon:execute[set=plenty, role="darkGrey"] *Varianten erstellen*.
 |====
 
 [TIP]
@@ -332,7 +332,7 @@ Vorschau des Artikels ansehen:
 → Das Fenster *Mandant (Shop)* wird angezeigt.
 . Entscheide, mit welchem *Plugin-Set* und *Mandanten* du eine Vorschau des Artikels sehen möchtest. +
 *_Tipp_*: Die Einstellungen bleiben erhalten, wenn du die Vorschau das nächste Mal öffnest.
-. Klicke auf icon:execute[set=plenty] *Ausführen*. +
+. Klicke auf icon:execute[set=plenty, role="darkGrey"] *Ausführen*. +
 → Eine Vorschau des Artikels wird angezeigt.
 
 
