--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -799,7 +799,7 @@ Klicke auf eine Preiskalkulation, um sie zu öffnen und weiter zu bearbeiten.
 |====
 |Symbol |Erläuterung
 
-|icon:refresh[set=plenty]
+|icon:refresh[set=plenty, role="darkGrey"]
 |Lädt das Menü neu.
 
 |icon:plus[role="darkGrey"]
@@ -810,9 +810,9 @@ Klicke auf eine Preiskalkulation, um sie zu öffnen und weiter zu bearbeiten.
 Wähle dazu die gewünschten Kalkulationen (icon:check-square[role="blue"]) und klicke auf icon:pencil[role="darkGrey"].
 Die Preiskalkulationen werden untereinander auf der linken Seite des Bildschirms angezeigt.
 
-|icon:copy[set=plenty]
+|icon:copy[set=plenty, role="darkGrey"]
 |Es ist möglich, bestehende Preiskalkulationen zu kopieren.
-Wähle dazu die gewünschten Kalkulationen (icon:check-square[role="blue"]) und klicke auf icon:copy[set=plenty].
+Wähle dazu die gewünschten Kalkulationen (icon:check-square[role="blue"]) und klicke auf icon:copy[set=plenty, role="darkGrey"].
 Die neuen Kalkulationen werden zur Übersicht hinzugefügt.
 Sie werden automatisch inaktiv geschaltet und als *Copy of "ursprünglicher Name"* bezeichnet.
 
@@ -969,7 +969,7 @@ Wenn du die Preiskalkulation für viele Artikel speichern möchtest, dann empfie
 include::page$massenbearbeitung.adoc[tag=varianten-gruppenfunktion]
 
 . Aktiviere die Option *Preiskalkulation* (icon:check-square[role="blue"]) und wähle eine bereits erstellte Kalkulation aus der Dropdown-Liste.
-. Klicke auf icon:execute[set=plenty] *Ausführen*, um die Einstellungen an den Varianten vorzunehmen.
+. Klicke auf icon:execute[set=plenty, role="darkGrey"] *Ausführen*, um die Einstellungen an den Varianten vorzunehmen.
 
 [discrete]
 ===== Stapelverarbeitung
@@ -977,7 +977,7 @@ include::page$massenbearbeitung.adoc[tag=varianten-gruppenfunktion]
 include::page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
 
 . Aktiviere rechts die Option *Preiskalkulation* (icon:check-square[role="blue"]) und wähle eine bereits erstellte Kalkulation aus der Dropdown-Liste.
-. Klicke auf icon:execute[set=plenty] *Anwenden*, um die Einstellungen an den Varianten vorzunehmen.
+. Klicke auf icon:execute[set=plenty, role="darkGrey"] *Anwenden*, um die Einstellungen an den Varianten vorzunehmen.
 
 --
 ====
