--- a/docs/de-de/modules/artikel/pages/suche.adoc
+++ b/docs/de-de/modules/artikel/pages/suche.adoc
@@ -253,7 +253,7 @@ a|Möchtest du nach xref:artikel:multipacks-pakete-sets.adoc#[Artikelpaketen] od
 a|Möchtest du nach Artikeln suchen, die Teil eines Listings oder einer Auktion sind?
 
 * *Ja* = Die Suchergebnisse enthalten nur Artikel, die Teil eines Listings oder einer Auktion sind, d.h. Artikel mit einem xref:artikel:suche.adoc#800[gelben Listing-Symbol] (icon:listings_show[set=plenty, role="yellow"]).
-* *Nein* = Die Suchergebnisse enthalten nur Artikel, die nicht Teil eines Listings oder einer Auktion sind, d.h. Artikel mit einem xref:artikel:suche.adoc#800[grauen Listing-Symbol] (icon:listings_show[set=plenty]).
+* *Nein* = Die Suchergebnisse enthalten nur Artikel, die nicht Teil eines Listings oder einer Auktion sind, d.h. Artikel mit einem xref:artikel:suche.adoc#800[grauen Listing-Symbol] (icon:listings_show[set=plenty, role="darkGrey"]).
 * *Auktion (Ja)* = Die Suchergebnisse enthalten nur Artikel, die Teil einer Auktion sind. Dies bedeutet, dass xref:maerkte:ebay-einrichten.adoc#3500[die Option *Typ* auf *Auktion* gesetzt wurde].
 * *Shop-Artikel/Festpreis (Ja)* = Die Suchergebnisse enthalten nur Artikel, die Teil eines Listings sind. Dies bedeutet, dass xref:maerkte:ebay-einrichten.adoc#3500[die Option *Typ* auf *Festpreis* oder *Shop-Artikel* gesetzt wurde].
 * *ALLE* = Die Suchergebnisse umfassen Artikel die Teil eines Listings und nicht Teil eines Listings sind. Dies ist die Standardeinstellung.
