--- a/docs/en-gb/modules/item/pages/availability.adoc
+++ b/docs/en-gb/modules/item/pages/availability.adoc
@@ -122,7 +122,7 @@ If you want to save the availability for lots of variations, then it makes sense
 include::import-export-create:page$mass-processing.adoc[tag=variation-group-function]
 
 . Activate the option with the symbols 1-10 (icon:check-square[role="blue"]) and select the appropriate availability level (icon:dot-circle-o[role="blue"]).
-. Click on icon:execute[set=plenty] *Execute* to apply the settings to the variations.
+. Click on icon:execute[set=plenty, role="darkGrey"] *Execute* to apply the settings to the variations.
 
 [discrete]
 ===== Batch processing
@@ -130,7 +130,7 @@ include::import-export-create:page$mass-processing.adoc[tag=variation-group-func
 include::import-export-create:page$mass-processing.adoc[tag=variation-batch-processing]
 
 . On the right, activate the option with the symbols 1-10 (icon:check-square[role="blue"]) and select the appropriate availability level (icon:dot-circle-o[role="blue"]).
-. Click on icon:execute[set=plenty] *Apply* to apply the settings to the variations.
+. Click on icon:execute[set=plenty, role="darkGrey"] *Apply* to apply the settings to the variations.
 
 --
 ====
