--- a/docs/en-gb/modules/item/pages/detail-view.adoc
+++ b/docs/en-gb/modules/item/pages/detail-view.adoc
@@ -58,7 +58,7 @@ image::item:details-new-view.gif[]
 [#400]
 === Creating a grid
 
-. Click on *Edit view* (icon:design_inline_edit[set=plenty]).
+. Click on *Edit view* (icon:design_inline_edit[set=plenty, role="darkGrey"]).
 . Add rows and columns to create a grid.
 .. Click on icon:ellipsis-v[role="blue"] and then on icon:plus[role="darkGrey"] *Add row*.
 .. Click on *Add column* (icon:plus[role="darkGrey"]).
@@ -136,7 +136,7 @@ image::item:details-custom-portlets.png[]
 . Save the view (icon:save[set=plenty, role="darkGrey"]) and close the editing mode (icon:close[role="darkGrey"]).
 . Check the result in the main window.
 . If necessary:
-.. Click on *Edit view* (icon:design_inline_edit[set=plenty]) again and edit the view even further.
+.. Click on *Edit view* (icon:design_inline_edit[set=plenty, role="darkGrey"]) again and edit the view even further.
 .. Allow other users to see the view.
 
 image::item:finish-editing.png[]
@@ -159,13 +159,13 @@ image::item:finish-editing.png[]
 You see the name of whichever view is currently open.
 Click on icon:caret-down[role="darkGrey"] to switch to a different view or create a xref:item:detail-view.adoc#300[new view].
 
-| icon:items_incoming_history[set=plenty]
+| icon:items_incoming_history[set=plenty, role="darkGrey"]
 |Resets the view to the state that was last saved.
 
 | icon:save[set=plenty, role="darkGrey"]
 |Saves the changes made to the view.
 
-| icon:close[set=plenty]
+| icon:close[set=plenty, role="darkGrey"]
 |Closes the editing mode.
 In case of unsaved changes, a dialogue is displayed.
 |====
@@ -180,8 +180,8 @@ You can grant or limit access to every single view.
 .*Users*
 --
 
-. Click on *Edit view* (icon:design_inline_edit[set=plenty]).
-. Click on icon:open_external_link[set=plenty] *Rights management*.
+. Click on *Edit view* (icon:design_inline_edit[set=plenty, role="darkGrey"]).
+. Click on icon:open_external_link[set=plenty, role="darkGrey"] *Rights management*.
 . Select *User* if you want to grant access to a specific user account. +
 → The menu *Setup » Settings » User » Rights » User* opens in a new tab.
 . Search for (icon:search[role=blue]) and open the appropriate user account.
@@ -197,8 +197,8 @@ xref:business-decisions:user-accounts-access.adoc#112[Further information] about
 .*Roles*
 --
 
-. Click on *Edit view* (icon:design_inline_edit[set=plenty]).
-. Click on icon:open_external_link[set=plenty] *Rights management*.
+. Click on *Edit view* (icon:design_inline_edit[set=plenty, role="darkGrey"]).
+. Click on icon:open_external_link[set=plenty, role="darkGrey"] *Rights management*.
 . Select *Roles* if you want to grant access to an entire user role. +
 → The menu *Setup » Settings » User » Rights » Roles* opens in a new tab.
 . Search for (icon:search[role=blue]) and open the appropriate user role.
