--- a/docs/en-gb/modules/item/pages/item-search.adoc
+++ b/docs/en-gb/modules/item/pages/item-search.adoc
@@ -31,7 +31,7 @@ You’ll learn how to:
 .. *_Option 1_*: Click on icon:search[role="darkGrey"] to see a list of all items.
 .. *_Option 2_*: Enter a number into the search field and click on one of the automatic suggestions.
 Then click on icon:search[role="darkGrey"] to start the search.
-.. *_Option 3_*: Click on icon:tune[set=material] to narrow down the search results with filters.
+.. *_Option 3_*: Click on icon:tune[set=material, role="darkGrey"] to narrow down the search results with filters.
 See the table below.
 . When you start the search, you’ll see the xref:item:search.adoc#500[results in an overview] on the right.
 
@@ -239,11 +239,11 @@ You can save these search settings to apply them again more quickly and easily i
 === Saving the current filters
 
 . Start a search.
-. Click on *Saved filters* (icon:bookmarks[set=material]).
-. Click on icon:bookmark_border[set=material] *Save current filter*.
+. Click on *Saved filters* (icon:bookmarks[set=material, role="darkGrey"]).
+. Click on icon:bookmark_border[set=material, role="darkGrey"] *Save current filter*.
 . Enter a name and toggle the optional settings as needed (icon:toggle_on[set=material, role="blue"]).
 . *Save* the settings. +
-→ The filter settings now appear under *Saved filters* (icon:bookmarks[set=material]).
+→ The filter settings now appear under *Saved filters* (icon:bookmarks[set=material, role="darkGrey"]).
 
 image::item:save-filters.gif[]
 
@@ -255,24 +255,24 @@ image::item:save-filters.gif[]
 |
 icon:toggle_on[set=material, role="blue"] = When you open the menu *Item » Item UI*, the filter settings will already be selected and the search will automatically start with these settings.
 
-icon:toggle_off[set=material] = The filter settings will not already be selected.
+icon:toggle_off[set=material, role="darkGrey"] = The filter settings will not already be selected.
 
 | *Create filter for all users*
 |
 icon:toggle_on[set=material, role="blue"] = The filter preset will be visible for all user accounts.
 
-icon:toggle_off[set=material] = The filter preset will only be visible for your own user account.
+icon:toggle_off[set=material, role="darkGrey"] = The filter preset will only be visible for your own user account.
 
 |====
 
 [TIP]
 .Post-processing of filters
 ======
-When you click on *Saved filters* (icon:bookmarks[set=material]), you’ll see post-processing options for the filter:
+When you click on *Saved filters* (icon:bookmarks[set=material, role="darkGrey"]), you’ll see post-processing options for the filter:
 
-icon:drag_indicator[set=material] = Use drag & drop to arrange the filter presets in a specific order.
+icon:drag_indicator[set=material, role="darkGrey"] = Use drag & drop to arrange the filter presets in a specific order.
 
-icon:delete[set=material] = Deletes the filter preset.
+icon:delete[set=material, role="darkGrey"] = Deletes the filter preset.
 
 icon:star-o[role="darkGrey"] = Sets the filter as default.
 ======
@@ -280,7 +280,7 @@ icon:star-o[role="darkGrey"] = Sets the filter as default.
 [#400]
 === Applying saved filters
 
-. Click on *Saved filters* (icon:bookmarks[set=material]).
+. Click on *Saved filters* (icon:bookmarks[set=material, role="darkGrey"]).
 . Click on an existing filter preset. +
 → The search is started and the search settings are displayed up top as so-called “chips”.
 
@@ -311,18 +311,18 @@ xref:item:manually-create-item.adoc#[Further information].
 Select the desired data records (icon:check-square[role="blue"]) and click on icon:pencil[role="darkGrey"].
 The data records will be displayed one below the other in the left navigation bar.
 
-| icon:delete[set=material]
+| icon:delete[set=material, role="darkGrey"]
 |It's possible to delete several item or variation data records at the same time.
 Select the desired data records (icon:check-square[role="blue"]) and click on icon:trash[role="darkGrey"].
 
 [cols="1,4a"]
 !===
 
-! icon:delete[set=material] *Delete items*
+! icon:delete[set=material, role="darkGrey"] *Delete items*
 !
 The item and all of its variations will be deleted.
 
-! icon:delete[set=material] *Delete variations*
+! icon:delete[set=material, role="darkGrey"] *Delete variations*
 !
 The individual variation will be deleted.
 
@@ -338,7 +338,7 @@ The individual variation will be deleted.
 
 *_Note_*: Data records do not remain selected across multiple pages.
 
-| icon:refresh[set=plenty]
+| icon:refresh[set=plenty, role="darkGrey"]
 |Reloads the menu.
 
 | icon:cog[role="darkGrey"]
@@ -444,11 +444,11 @@ image::item:configure-columns.png[]
 . Select all of the desired columns (icon:check-square[role="blue"]).
 . Click on *CONFIRM*.
 
-| icon:drag_indicator[set=material]
+| icon:drag_indicator[set=material, role="darkGrey"]
 |Which order should the columns be displayed in?
 
 . Click on *Configure columns* (icon:gear[role="darkGrey"]).
-. Move your mouse cursor over an entry with the symbol icon:drag_indicator[set=material]. +
+. Move your mouse cursor over an entry with the symbol icon:drag_indicator[set=material, role="darkGrey"]. +
 → Your mouse cursor changes shape (icon:arrows[role="darkGrey"]).
 . Drag the entry to the desired spot.
 . Click on *CONFIRM*.
