--- a/docs/en-gb/modules/item/pages/prices.adoc
+++ b/docs/en-gb/modules/item/pages/prices.adoc
@@ -799,7 +799,7 @@ Click on a price calculation to open it and edit it further.
 |====
 |Icon |Explanation
 
-|icon:refresh[set=plenty]
+|icon:refresh[set=plenty, role="darkGrey"]
 |Reloads the menu.
 
 |icon:plus[role="darkGrey"]
@@ -810,9 +810,9 @@ Click on a price calculation to open it and edit it further.
 Select the desired calculations (icon:check-square[role="blue"]) and click on icon:pencil[role="darkGrey"].
 The price calculations will be displayed one below the other on the left side of the screen.
 
-|icon:copy[set=plenty]
+|icon:copy[set=plenty, role="darkGrey"]
 |It's possible to copy existing price calculations.
-Select the desired calculations (icon:check-square[role="blue"]) and click on icon:copy[set=plenty].
+Select the desired calculations (icon:check-square[role="blue"]) and click on icon:copy[set=plenty, role="darkGrey"].
 The new calculations will be added to the overview.
 They will automatically be made inactive and given the name *Copy of "original name"*.
 
@@ -969,7 +969,7 @@ If you want to save the price calculation for lots of items, then we would recom
 include::page$mass-processing.adoc[tag=variation-group-function]
 
 . Activate the option *Price calculation* (icon:check-square[role="blue"]) and select an existing calculation from the drop-down list.
-. Click on icon:execute[set=plenty] *Execute* to apply the settings to the variations.
+. Click on icon:execute[set=plenty, role="darkGrey"] *Execute* to apply the settings to the variations.
 
 [discrete]
 ===== Batch processing
@@ -977,7 +977,7 @@ include::page$mass-processing.adoc[tag=variation-group-function]
 include::page$mass-processing.adoc[tag=variation-batch-processing]
 
 . On the right, activate the option *Price calculation* (icon:check-square[role="blue"]) and select an existing calculation from the drop-down list.
-. Click on icon:execute[set=plenty] *Apply* to apply the settings to the variations.
+. Click on icon:execute[set=plenty, role="darkGrey"] *Apply* to apply the settings to the variations.
 
 --
 ====
