--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -313,6 +313,9 @@ Zum besseren Verständnis empfehlen wir dir unser Video-Tutorial, in dem die Ein
 
 Kacheln sind quadratische Darstellungsbereiche. Sie stellen Daten ausschließlich in Text- und Zahlenform dar. Du kannst zwischen verschiedenen Farben wählen sowie Angaben zu Zeiträumen und Zielwerten darstellen.
 
+[#510]
+==== Einstellungen zu Kacheln vornehmen
+
 Füge zunächst ein Element vom Typ *Kachel* zum Dashboard hinzu. Gehe dann wie folgt vor, um individuelle Einstellungen für die Kachel vorzunehmen.
 
 [.collapseBox]
@@ -380,6 +383,12 @@ Klicke auf (icon:icon-settings[role=darkGrey]), um einen oder mehrere Shortcuts 
 | Hast du bei der Einstellung *Link zu detaillierter Dashboard-Ansicht* eine bereits existierende Dashboard-Ansicht ausgewählt? Dann kannst du hier festlegen, nach welchen Kriterien diese Ansicht eingegrenzt wird. Klicke auf *Parameter-Konfiguration* (icon:settings[set=material]), um eine oder mehrere Kriterien festzulegen. Je nach der Kennzahl, die auf der Kachel dargestellt wird, stehen die Parameter *Lieferland*, *Benutzer* oder *Nachrichten-Tag* zur Verfügung.
 
 |====
+
+[#520]
+==== Daten aus Kacheln einsehen und exportieren
+
+
+
 
 --
 
@@ -1065,16 +1074,16 @@ Einstellungen für Baumdiagramme vornehmen:
 --
 
 [#750]
-==== Weitere Funktionen für Diagramme nutzen
+==== Daten zu Diagrammen einsehen und exportieren
 
 Sobald du Diagramme auf deinem Dashboard platziert hast, stehen dir automatisch zusätzliche Funktionen zur Verfügung. Diese zusätzlichen Funktionen sind für jeden Diagrammtyp identisch und ermöglichen dir, detaillierte Informationen zur Datenbasis einzusehen oder Daten herunterzuladen.
 
 [.collapseBox]
-.*Weitere Funktionen für Diagramme nutzen*
+.*Daten zu Diagrammen einsehen und exportieren*
 --
 
 [.instruction]
-Weitere Funktionen für Diagramme nutzen:
+Daten zu Diagrammen einsehen und exportieren:
 
 . Klicke an der rechten oberen Ecke des Diagramms auf (icon:ellipsis-h[rotate=90]). +
 → Eine Liste verfügbarer Optionen wird angezeigt.
@@ -1096,7 +1105,10 @@ Weitere Funktionen für Diagramme nutzen:
 | Diese Option zeigt links neben der Liste die Kennzahlkonfiguration(en) an, auf denen das Diagramm basiert. Klicke auf den Namen, um in eine weitere Ansicht zu gelangen, die die aktuellen Ergebnisse der Rohdaten im Detail enthält.
 
 | *Daten speichern*
-| Lädt die aktuell angezeigten Daten des Diagramms herunter. Wähle aus den Optionen *CSV* und *JSON*, um das Dateiformat festzulegen.
+| Lädt die aktuell angezeigten Daten des Diagramms herunter. Wähle aus den Optionen *CSV* und *JSON*, um das Dateiformat festzulegen. +
+Über die Option *In Google Tabellen exportieren* kannst du die Daten des Diagramms in eine Google Tabelle übertragen. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über einen Google Account verfügen und im Google Tabellen-Tool bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 
 | *Filter ändern*
 | Erlaubt dir, die beim Erstellen des Diagramms gewählten Kennzahlen, Zeiträume und Dimensionen schnell und unkompliziert zu ändern. Somit kannst du die Datenbasis eines Diagramms beeinflussen und dir aktuelle Daten aufbereiten, wenn du beispielsweise sehr kurzfristig weitere Informationen benötigst.
