--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -78,7 +78,7 @@ Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standa
 [#auftragsabwicklung-filter]
 ==== Filter
 
-Mit Filtern grenzt du genau ein, welche Aufträge mit dem Arbeitsschritt *Auftragsabwicklung* bearbeitet werden.
+Mit Filtern bestimmst du genau, welche Aufträge mit dem Arbeitsschritt *Auftragsabwicklung* bearbeitet werden.
 
 <<table-work-step-filter>> erläutert die für diesen Arbeitsschritt verfügbaren Filter.
 
@@ -163,6 +163,10 @@ Füge zuerst den Filter *Auftragslager* hinzu und wähle ein Lager aus der Dropd
 
 | *Status*
 |Wähle einen xref:auftraege:auftraege-verwalten.adoc#1200[Status] aus, um nach Aufträgen mit dem gewählten Status zu filtern.
+
+| *Tag*
+|Wähle einen oder mehrere xref:artikel:markierungen.adoc#400[Tags], um nach Aufträgen mit den gewählten Tags zu filtern. +
+Aktiviere zusätzlich eine der Optionen *Aufträge mit exakt diesen Tags* oder *Aufträge mit mindestens diesen Tags*, um genau zu bestimmen, wie nach Tags gefiltert werden soll.
 
 | *Treueprogramm*
 |Wähle ein Treueprogramm, mehrere oder keines um nur Aufträge aus diesem oder ohne Treueprogramm abzuwickeln. +
