update links on companies page

--- a/docs/de-de/modules/crm/pages/firmen.adoc
+++ b/docs/de-de/modules/crm/pages/firmen.adoc
@@ -149,7 +149,7 @@ Mit den Optionen *Valuta*, *Zahlungsziel*, *Skontofrist* und *Skontosatz* ist z.
 60 Tage Valuta, 30 Tage netto (Zahlungsziel), 10 Tage mit 2% Skonto
 
 Erläuterung: Geht die Zahlung eines Auftrags bei dir innerhalb von 10 Tagen ein, erhält die Firma einen Skonto von 2%. Nach insgesamt 91 Tagen befindet sich die Zahlung im Verzug. Beim Import von Zahlungseingängen und der automatischen Zuordnung wird vorab systemseitig automatisch geprüft, ob der von Firmen durchgeführte Skontoabzug gültig ist. Ist der Skontozeitraum abgelaufen, erhält der Auftrag den Status *Teilzahlung erhalten*. +
-Die oben aufgeführten Zahlungsbedingungen werden automatisch in den Auftrag sowie in die xref:auftraege:auftragsdokumente.adoc#intable-zahlungsbedingungen-dokumente[Dokumente] übernommen. Am Auftrag lassen sich die xref:auftraege:auftraege-verwalten.adoc#intable-zahlungsbedingungen-auftrag[Zahlungsbedingungen] manuell anpassen oder eingeben, wenn im xref:crm:kontakte-verwalten.adoc#intable-kontakt-bearbeiten-firma-valuta[Kontakt] und der xref:crm:kontakte-verwalten.adoc#intable-kundenklasse-zahlungsziel[Kundenklasse] noch keine Werte hinterlegt sind, die übernommen werden können.
+Die oben aufgeführten Zahlungsbedingungen werden automatisch in den Auftrag sowie in die xref:auftraege:auftragsdokumente.adoc#intable-zahlungsbedingungen-dokumente[Dokumente] übernommen. Am Auftrag lassen sich die xref:auftraege:auftraege-verwalten.adoc#intable-zahlungsbedingungen-auftrag[Zahlungsbedingungen] manuell anpassen oder eingeben, wenn im Firmendatensatz (siehe <<#table-create-company>>) und in der xref:crm:vorbereitende-einstellungen.adoc#intable-customer-class-terms-of-payment[Kundenklasse] noch keine Werte für diese Zahlungsbedingungen hinterlegt sind, die übernommen werden können.
 --
 
 [#firma-suchen]
