update links on newsletter page

--- a/docs/en-gb/modules/crm/pages/sending-newsletters.adoc
+++ b/docs/en-gb/modules/crm/pages/sending-newsletters.adoc
@@ -4,7 +4,7 @@
 :id: JIHLVCR
 :author: team-crm
 
-This page of the manual describes which settings you need to carry out to send newsletters with plentymarkets. Send your newsletters e.g. with the xref:crm:sending-newsletters.adoc#100[newsletter service integrated in plentymarkets], via the integrated interface to xref:crm:sending-newsletters.adoc#1700[CleverReach] or via other email marketing and newsletter plugins available in the link:https://marketplace.plentymarkets.com/en/plugins/integration[plentyMarketplace^].
+This page of the manual describes which settings you need to carry out to send newsletters with plentymarkets to your xref:crm:contacts.adoc#[contacts]. Send your newsletters e.g. with the xref:crm:sending-newsletters.adoc#100[newsletter service integrated in plentymarkets], via the integrated interface to xref:crm:sending-newsletters.adoc#1700[CleverReach] or via other email marketing and newsletter plugins available in the link:https://marketplace.plentymarkets.com/en/plugins/integration[plentyMarketplace^].
 
 [#100]
 == Setting up the newsletter service integrated in plentymarkets
@@ -237,7 +237,7 @@ In the next step, link the email template that you have just created with the do
 ====
 You have to xref:crm:sending-newsletters.adoc#700[create] 2 templates and select these for the events *Newsletter opt-in* and *Newsletter opt-in confirmation* in the *Setup » Client » [Select client] » Email » Automatic* menu. The selected template under *Newsletter opt-in* is sent when the customer has registered for the newsletter. This template should contain the confirmation link that the customer has to click in order to complete the newsletter registration. Use the template variable `$NewsletterConfirmURL` to display the confirmation link. This template variable contains the URL to confirm the newsletter registration. The selected template under *Newsletter opt-in confirmation* is sent when the customer has activated the confirmation link.
 
-In the contact data record in the *CRM » Contacts » [Open contact] » Area: Details* menu, the *Newsletter* option is activated automatically when the customer has registered for the newsletter during the order process and has confirmed the newsletter registration via the confirmation link.
+In the contact data record in the *CRM » Contacts » [Open contact]* menu in the *Contact details* area, the *Newsletter* option is activated automatically when the customer has registered for the newsletter during the order process and has confirmed the newsletter registration via the confirmation link.
 ====
 
 [.instruction]
@@ -449,7 +449,7 @@ Filtering customer data:
 |Select a client (store) to filter customers who bought an item from this client (store).
 
 | *Customer class*
-| Select a xref:crm:managing-contacts.adoc#15[customer class] to filter customers who belong to this class.
+| Select a xref:crm:preparatory-settings.adoc#create-customer-class[customer class] to filter customers who belong to this class.
 
 | *Order referrer*
 |Select an order referrer to filter customers who placed orders with this order referrer.
