update links on ticket system page

--- a/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
+++ b/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
@@ -1051,7 +1051,7 @@ Im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* kannst du xref:cr
 |Grenze die Ticketsuche auf einen Eigner ein. In der Dropdown-Liste stehen alle Benutzer:innen zur Auswahl, für die im Tab *Eigner* des Benutzer:innenkontos die Option *Ticket* aktiviert wurde.
 
 | *Kundenklasse*
-|Wähle eine Kundenklasse, um nur Tickets von Kund:innen dieser Kundenklasse zu suchen. xref:crm:kontakte-verwalten.adoc#15[Kundenklassen] werden im Menü *Einrichtung » CRM » Kundenklassen* erstellt.
+|Wähle eine Kundenklasse, um nur Tickets von Kund:innen dieser Kundenklasse zu suchen. xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] werden im Menü *Einrichtung » CRM » Kundenklassen* erstellt.
 
 | *Mandant (Shop)*
 |Wähle den Mandant (Shop) aus der Dropdown-Liste.
@@ -1161,7 +1161,7 @@ Rot = Das Ticket ist mindestens 8 Tage alt.
 [#3700]
 === Kontaktdaten anzeigen
 
-Im Tab *Kunde* des Tickets im Menü *CRM » Ticketsystem* sind die xref:crm:kontakte-verwalten.adoc#300[Kontaktdaten] enthalten wie sie auch im Menü *CRM » Kontakte » [Kontakt öffnen]* angezeigt werden. Du kannst den Kontaktdatensatz hier auch bearbeiten. Dieses Tab ist nur sichtbar, wenn das Ticket mit einem Kontakt verknüpft ist.
+Im Tab *Kunde* des Tickets im Menü *CRM » Ticketsystem* sind die xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Kontaktdaten] enthalten wie sie auch im Menü *CRM » Kontakte » [Kontakt öffnen]* angezeigt werden. Du kannst den Kontaktdatensatz hier auch bearbeiten. Dieses Tab ist nur sichtbar, wenn das Ticket mit einem Kontakt verknüpft ist.
 
 [#3800]
 === Aufträge anzeigen
