update links on ar list page

--- a/docs/de-de/modules/crm/pages/op-liste.adoc
+++ b/docs/de-de/modules/crm/pages/op-liste.adoc
@@ -9,7 +9,7 @@ Im Menü *CRM » OP-Liste* erhältst du eine Übersicht über offene Posten. All
 [#vorbereitende-einstellungen]
 == Vorbereitende Einstellungen
 
-Im Menü *Einrichtung » CRM » Einstellungen* wählst du Standardeinstellungen für die xref:crm:op-liste.adoc#filtern[Suchfilter] der Offenen Posten Tabelle. Beachte dazu die Erläuterungen in <<table-default-settings-filters-ar-list>>.
+Im Menü *Einrichtung » CRM » Einstellungen* wählst du Standardeinstellungen für die xref:crm:op-liste.adoc#filtern[Suchfilter] der Offenen Posten-Tabelle. Beachte dazu die Erläuterungen in <<#table-default-settings-filters-ar-list>>.
 
 [[table-default-settings-filters-ar-list]]
 .Filtereinstellungen Offene Posten
@@ -18,10 +18,10 @@ Im Menü *Einrichtung » CRM » Einstellungen* wählst du Standardeinstellungen 
 |Einstellung |Erläuterung
 
 |[#intable-ar-list-default-filter-contact-type]*Filter Kundentyp*
-|Lege fest, welche xref:crm:kontakte-verwalten.adoc#20[Kundentypen] für den Filter *Kundentyp* in der OP-Liste zur Verfügung stehen sollen. Wählst du für diese Einstellung keine Kundentypen aus, werden im Filter Gast und Kunde zur Auswahl angeboten.
+|Lege fest, welche xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Kundentypen] für den Filter *Kundentyp* in der OP-Liste zur Verfügung stehen sollen. Wählst du für diese Einstellung keine Kundentypen aus, werden im Filter Gast und Kunde zur Auswahl angeboten.
 
 |[#intable-ar-list-default-filter-customer-class]*Filter Kundenklasse*
-|Lege fest, welche Kundenklassen für den Filter *Kundenklasse* in der OP-Liste zur Verfügung stehen sollen. Wählst du für diese Einstellung keine Kundenklassen aus, werden im Filter immer alle erstellten xref:crm:kontakte-verwalten.adoc#15[Kundenklassen] zur Auswahl angeboten.
+|Lege fest, welche Kundenklassen für den Filter *Kundenklasse* in der OP-Liste zur Verfügung stehen sollen. Wählst du für diese Einstellung keine Kundenklassen aus, werden im Filter immer alle erstellten xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] zur Auswahl angeboten.
 
 |====
 
@@ -37,20 +37,20 @@ Damit für Benutzer:innen mit *Backend*-Zugang die OP-Liste sichtbar ist, musst 
 Die Tabelle im Menü *CRM » OP-Liste* enthält Informationen zum Kontakt sowie die Anzahl der offenen Posten eines Kontakts und die Höhe der Forderung, die sich aus den offenen Posten ergibt. Hat ein Kontakt eine offene Forderung überbezahlt, wird dieser Betrag mit weiteren ausstehenden Forderungen verrechnet. Bestehen keine weiteren Forderungen, wird in der Spalte *Forderung* ein Minusbetrag angezeigt. +
 Beim Öffnen der OP-Liste wird dir immer eine bereits gefilterte Ansicht gezeigt. Gefiltert wird automatisch nach den Kundentypen *Kunde* und *Gast*. Über den xref:crm:op-liste.adoc#intable-ar-list-filter-contact-type[Filter Kundentyp] kannst du offene Forderungen für weitere Kundentypen anzeigen lassen.
 
-Klickst du in eine Zeile der Tabelle, wirst du zur xref:crm:kontakte-verwalten.adoc#1800[Kontoübersicht] des entsprechenden Kontakts weitergeleitet. Dort werden dir dann die offenen Beträge mit überschrittenem Zahlungsziel für diesen Kontakt angezeigt. Handelt es sich um eine Gastbestellung, wirst du bei Klicken in die Zeile zum entsprechenden Auftrag weitergeleitet.
+Wenn du in der Zeile der Tabelle auf die Kontakt-ID klickst, wirst du zum xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Kontaktdatensatz] des entsprechenden Kontakts weitergeleitet. Klicke dort auf der linken Seite auf *Konto*, um die offenen Beträge mit überschrittenem Zahlungsziel für diesen Kontakt anzuzeigen. Handelt es sich um eine Gastbestellung, wirst du bei Klicken in die Zeile zum entsprechenden Auftrag weitergeleitet.
 
-Diese Tabelle ist individuell anpassbar. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden. Gehe dafür folgendermaßen vor:
+Du kannst diese Tabelle individuell anpassen. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden. Gehe dafür folgendermaßen vor:
 
 [.instruction]
 Tabelle individualisieren:
 
-. Klicke auf *Spalten konfigurieren* (icon:cog[]). +
+. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
-. Wähle aus, welche Spalten angezeigt werden sollen. Beachte dafür <<table-ar-list>>.
+. Wähle aus, welche Spalten angezeigt werden sollen. Beachte dafür <<#table-ar-list>>.
 . Verschiebe (icon:drag_sort_handle[set=plenty]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
-Wenn du die Tabelle einmal angepasst hast, wird diese Auswahl gespeichert. Du kannst das Layout jederzeit ändern. Die zu Verfügung stehenden Spalten findest du in <<table-ar-list>>. Dort ist zu jeder Spalte auch die Information hinterlegt, ob es sich um eine Standardspalte handelt. Standardspalten werden angezeigt, wenn die Tabelle nicht individualisiert ist.
+Wenn du die Tabelle einmal angepasst hast, wird diese Auswahl gespeichert. Du kannst das Layout jederzeit ändern. Die zu Verfügung stehenden Spalten findest du in <<#table-ar-list>>. Dort ist zu jeder Spalte auch die Information hinterlegt, ob es sich um eine Standardspalte handelt. Standardspalten werden angezeigt, wenn die Tabelle nicht individualisiert ist.
 
 [[table-ar-list]]
 .Tabelle Offene Posten
@@ -111,7 +111,7 @@ Diese Spalte ist keine Standardspalte.
 Diese Spalte ist keine Standardspalte.
 
 |*Aktion*
-| In dieser Spalte stehen dir verschiedene Aktionen zur Verfügung. Durch Klicken auf *Auftragssuche öffnen* (icon:external-link[]) wirst du zur Auftragsübersicht im Menü *Aufträge » Aufträge bearbeiten* weitergeleitet. Dort wird eine gefilterte Ansicht gezeigt. Dadurch siehst du direkt die unbezahlten und teilbezahlten nicht stornierten Aufträge der entsprechenden Kund:in. +
+| In dieser Spalte stehen dir verschiedene Aktionen zur Verfügung. Durch Klicken auf *Auftragssuche öffnen* (icon:launch[set=material]) wirst du zur Auftragsübersicht im Menü *Aufträge » Aufträge bearbeiten* weitergeleitet. Dort wird eine gefilterte Ansicht gezeigt. Dadurch siehst du direkt die unbezahlten und teilbezahlten nicht stornierten Aufträge der entsprechenden Kund:in. +
 Durch Klicken auf *Messenger öffnen* icon:message[set=material] wirst du in den Bereich *Messenger* im Kontaktdatensatz des ausgewählten Kontakts weitergeleitet. +
 Diese Spalte ist eine Standardspalte.
 
@@ -134,11 +134,11 @@ Dir stehen verschiedene Filtereinstellungen für die offene Posten Tabelle zur V
 |Suche mit diesem Filter nach einem bestimmten Kontakt mit offenen Forderungen. Die Eingabe mehrerer Kontakt-IDs ist möglich, um nach mehreren Kontakten gleichzeitig zu suchen.
 
 |[#intable-ar-list-filter-contact-type]*Kundentyp*
-|Suche mit diesem Filter nach offenen Forderungen von bestimmten xref:crm:kontakte-verwalten.adoc#20[Kundentypen]. Wähle dafür aus der Dropdown-Liste einen oder mehrere Typen aus. Beim Öffnen der OP-Liste wird dir immer eine bereits gefilterte Ansicht gezeigt. Gefiltert wird automatisch nach den Kundentypen *Kunde* und *Gast*. +
+|Suche mit diesem Filter nach offenen Forderungen von bestimmten xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Kundentypen]. Wähle dafür aus der Dropdown-Liste einen oder mehrere Typen aus. Beim Öffnen der OP-Liste wird dir immer eine bereits gefilterte Ansicht gezeigt. Gefiltert wird automatisch nach den Kundentypen *Kunde* und *Gast*. +
 Beachte auch die xref:crm:op-liste.adoc#intable-ar-list-default-filter-contact-type[Standardeinstellung] für diesen Filter.
 
 |*Kundenklasse*
-|Suche mit diesem Filter nach offenen Forderungen von bestimmten xref:crm:kontakte-verwalten.adoc#15[Kundenklassen]. Wähle dafür aus der Dropdown-Liste eine oder mehrere Kundenklassen aus. Beachte auch die xref:crm:op-liste.adoc#intable-ar-list-default-filter-customer-class[Standardeinstellung] für diesen Filter.
+|Suche mit diesem Filter nach offenen Forderungen von bestimmten xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen]. Wähle dafür aus der Dropdown-Liste eine oder mehrere Kundenklassen aus. Beachte auch die xref:crm:op-liste.adoc#intable-ar-list-default-filter-customer-class[Standardeinstellung] für diesen Filter.
 
 |*Land*
 |Suche mit diesem Filter nach offenen Forderungen gruppiert nach Land. Gefiltert wird nach dem Land der Rechnungsadresse. Wähle dafür aus der Dropdown-Liste ein oder mehrere Länder aus.
