--- a/docs/de-de/modules/_includes/pages/overview-customise.adoc
+++ b/docs/de-de/modules/_includes/pages/overview-customise.adoc
@@ -55,3 +55,7 @@ ifdef::arrows[]
 . Klicke auf icon:arrow_downward[set=material] oder icon:arrow_upward[set=material], um die Sortierreihenfolge zu ändern.
 endif::arrows[]
 |====
+
+:arrows!:
+:screenshot-overview!:
+:include-list-of-columns!:
