--- a/docs/de-de/modules/_includes/pages/overview-customise.adoc
+++ b/docs/de-de/modules/_includes/pages/overview-customise.adoc
@@ -35,6 +35,7 @@ ifdef::list-of-columns[]
 {include-list-of-columns}
 
 --
+endif::list-of-columns[]
 
 | icon:drag_indicator[set=material]
 |In welcher Reihenfolge sollen die Spalten angezeigt werden?
