catalogue overview description - DE

--- a/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
@@ -64,7 +64,7 @@ __Menüaufbau eines Katalogs mit Marktplatz-Format__
 ! Wird beim Öffnen des Katalogs angezeigt. Hier ordnest du den Marktplatz-Datenfeldern passende plentymarkets Datenfelder zu.
 
 ! icon:filter_alt[set=material] Filter
-! Setze Filter, um nur bestimmte Daten zu exportieren.
+! Setze Filter, um nur bestimmte Datensätze zu exportieren.
 
 ! icon:order_return_create_edit[set=plenty] *Eigene Datenfelder*
 ! Eigene Datenfelder sind für die meisten Exporte noch nicht verfügbar.
