--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -4,8 +4,9 @@ Die Katalogübersicht ist das Erste was du siehst, wenn du das Menü *Daten » K
 
 ==== Navigation
 
-Über die Navigation klickst du dich durch die verschiedenen Ansichten. Der Bereich, in dem du dich befindest, wird blau angezeigt.
+Über die Navigation klickst du dich durch die verschiedenen Ansichten. Der Bereich, in dem du dich befindest, wird in blauer Schrift angezeigt.
 
+// TODO: Ersetzen durch Screenshot des gesamten Menüs ausgegraut außer diesem Bereich
 image::daten:catalogue-overview-navigation.png[]
 
 [cols="1,2a"]
@@ -76,6 +77,7 @@ image::daten:catalogue-overview-navigation.png[]
 
 In der Symbolleiste kannst du für die Kataloge relevante Aktionen durchführen.
 
+// TODO: Ersetzen durch Screenshot des gesamten Menüs ausgegraut außer diesem Bereich
 image::daten:catalogue-overview-toolbar.png[]
 
 [cols="1,5a"]
@@ -122,8 +124,9 @@ Du kannst Kataloge aus anderen plentymarkets Systemen importieren oder Kataloge,
 
 ==== Liste der Kataloge
 
-Hier sind alle Kataloge aufgelistet. Toll, was?
+Hier sind alle Kataloge aufgelistet.
 
+// TODO: Ersetzen durch Screenshot des gesamten Menüs ausgegraut außer diesem Bereich
 image::daten:catalogue-overview-list.png[]
 
 [cols="1,3a"]
@@ -179,6 +182,7 @@ icon:toggle_on[set=material] = Der Katalog ist aktiv. Es werden also Daten expor
 
 Du kannst die Übersicht an deine Bedürfnisse anpassen.
 
+// TODO: Ersetzen durch Screenshot des gesamten Menüs ausgegraut außer diesem Bereich
 image::daten:catalogue-overview-customise.png[]
 
 [cols="1,6a"]
