--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -178,9 +178,9 @@ icon:toggle_on[set=material] = Der Katalog ist aktiv. Es werden also Daten expor
 !===
 |===
 
-==== Übersicht individuell gestalten
+==== Liste individuell gestalten
 
-Du kannst die Übersicht an deine Bedürfnisse anpassen.
+Du kannst die Liste an deine Bedürfnisse anpassen.
 
 // TODO: Ersetzen durch Screenshot des gesamten Menüs ausgegraut außer diesem Bereich
 image::daten:catalogue-overview-customise.png[]
