--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -18,6 +18,8 @@ NOTE: Bisher kannst du noch nicht alle Arten von Daten über Kataloge exportiere
 
 == Erstes Kennenlernen
 
+Du beschäftigst dich zum ersten Mal mit den Katalogen? Dann bist du hier richtig. Mache dich mit der Katalogübersicht und dem Katalogmenü vertraut, bevor du loslegst und selbst Kataloge erstellst.
+
 [#catalogue-overview]
 === Katalogübersicht verstehen
 
