--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -147,7 +147,7 @@ icon:toggle_on[set=material] = Der Katalog ist aktiv. Es werden also Daten expor
 | Handelt es sich um ein Standardformat oder um ein Format für einen Marktplatz?
 
 | *Format-Typ*
-| 
+| Welche Arten von Daten werden exportiert?
 
 | *Letzte Änderung*
 | Wann wurde der Katalog zuletzt geändert?
