--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -384,13 +384,35 @@ Klicke auf (icon:icon-settings[role=darkGrey]), um einen oder mehrere Shortcuts 
 
 |====
 
-[#520]
-==== Daten aus Kacheln einsehen und exportieren
-
-
-
-
 --
+
+[#520]
+==== Daten aus Kacheln einsehen oder exportieren
+
+Möchtest du auf Kacheln dargestellte Daten genauer einsehen oder exportieren? Dann gehe wie unten beschrieben vor.
+
+[.instruction]
+
+. Bewege den Mauszeiger über die Kachel, deren Daten du einsehen oder exportieren möchtest.
+. Klicke auf *Aktionen* (icon:ellipsis-h[rotate=90]). +
+→ Weitere Optionen werden angezeigt. Beachte die Informationen in <<table-tile-data>>.
+
+[[table-tile-data]]
+[width="100%"]
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Rohdaten*
+| Diese Option zeigt die Kennzahlkonfiguration(en) an, auf denen die Kachel basiert. Klicke auf den Namen, um in eine weitere Ansicht zu gelangen, die die aktuellen Ergebnisse der Rohdaten im Detail enthält.
+
+| *In Google Tabellen exportieren*
+| Nutze diese Option, um die Daten der Kachel in eine Google Tabelle zu exportieren. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über einen Google Account verfügen und im Google Tabellen-Tool bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
+
+|====
+
 
 [#800]
 === Zeilen verwenden
@@ -1102,7 +1124,7 @@ Daten zu Diagrammen einsehen und exportieren:
 | Öffnet die Druckvorschau für den aktuell angezeigten Stand des Diagramms. So kannst du schnell einen Druckvorgang starten. Neben der Abbildung des Diagramms enthält der Ausdruck das aktuelle Datum und Informationen aus dem plentymarkets System, aus dem das Diagramm stammt. Du kannst wie gewohnt im Dialogfenster des Druckers Einstellungen zu Ausrichtung, Format und Kopien vornehmen.
 
 | *Rohdaten*
-| Diese Option zeigt links neben der Liste die Kennzahlkonfiguration(en) an, auf denen das Diagramm basiert. Klicke auf den Namen, um in eine weitere Ansicht zu gelangen, die die aktuellen Ergebnisse der Rohdaten im Detail enthält.
+| Diese Option zeigt die Kennzahlkonfiguration(en) an, auf denen das Diagramm basiert. Klicke auf den Namen, um in eine weitere Ansicht zu gelangen, die die aktuellen Ergebnisse der Rohdaten im Detail enthält.
 
 | *Daten speichern*
 | Lädt die aktuell angezeigten Daten des Diagramms herunter. Wähle aus den Optionen *CSV* und *JSON*, um das Dateiformat festzulegen. +
