--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -386,12 +386,15 @@ Klicke auf (icon:icon-settings[role=darkGrey]), um einen oder mehrere Shortcuts 
 
 --
 
+
+
 [#520]
 ==== Daten aus Kacheln einsehen oder exportieren
 
 Möchtest du auf Kacheln dargestellte Daten genauer einsehen oder exportieren? Dann gehe wie unten beschrieben vor.
 
 [.instruction]
+Daten aus Kacheln einsehen oder exportieren:
 
 . Bewege den Mauszeiger über die Kachel, deren Daten du einsehen oder exportieren möchtest.
 . Klicke auf *Aktionen* (icon:ellipsis-h[rotate=90]). +
@@ -412,7 +415,6 @@ Möchtest du auf Kacheln dargestellte Daten genauer einsehen oder exportieren? D
 *_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 
 |====
-
 
 [#800]
 === Zeilen verwenden
@@ -493,6 +495,34 @@ Klicke auf (icon:icon-settings[role=darkGrey]), um einen oder mehrere Shortcuts 
 |====
 
 --
+
+[#805]
+==== Daten aus Zeilen einsehen oder exportieren
+
+Möchtest du auf Zeilen dargestellte Daten genauer einsehen oder exportieren? Dann gehe wie unten beschrieben vor.
+
+[.instruction]
+Daten aus Zeilen einsehen oder exportieren:
+
+. Bewege den Mauszeiger über die Zeile, deren Daten du einsehen oder exportieren möchtest.
+. Klicke auf *Aktionen* (icon:ellipsis-h[rotate=90]). +
+→ Weitere Optionen werden angezeigt. Beachte die Informationen in <<table-row-data>>.
+
+[[table-row-data]]
+[width="100%"]
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Rohdaten*
+| Diese Option zeigt die Kennzahlkonfiguration(en) an, auf denen die Zeile basiert. Klicke auf den Namen, um in eine weitere Ansicht zu gelangen, die die aktuellen Ergebnisse der Rohdaten im Detail enthält.
+
+| *In Google Tabellen exportieren*
+| Nutze diese Option, um die Daten der Zeile in eine Google Tabelle zu exportieren. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über einen Google Account verfügen und im Google Tabellen-Tool bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
+
+|====
 
 [#600]
 === Tabellen verwenden
