--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -9,6 +9,8 @@ Im Menü *CRM » Messenger (Testphase)* verwaltest du sowohl die externe Kommuni
 
 Das Menü *CRM » Messenger (Testphase)* ist wie folgt aufgebaut:
 
+image::crm:messenger-menu-structure.png[width=640, height=360]
+
 // TODO: farblich markierten Screenshot einfügen.
 
 * *Navigation*: Hier navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blauer Hintergrund) wird im Hauptfenster rechts angezeigt. Klicke auf icon:menu[set=material], um die Navigationsleiste ein- und auszublenden. +
@@ -189,7 +191,7 @@ Die folgenden Dateitypen sind als Anhang in der Nachricht zulässig: bmp, csv, g
 
 | *In Flüster-Modus umschalten* (icon:visibility[set=material] / icon:visibility_off[set=material, role=skyBlue])
 // in der UI doch wieder umbenennen in "Flüstern". oder kann man die Tooltiptexte umbenennen, wenn man auf das Auge klickt.
-|Du kannst Nachrichten flüstern, damit diese nur intern und _nicht_ für deine Kontakte sichtbar sind. Klicke dazu auf icon:visibility[set=material]. Du erkennst eine geflüsterte Nachricht in dieser Ansicht daran, dass die Schaltfläche icon:visiblity_off[set=material, role=skyBlue] angezeigt wird. Außerdem ändert sich die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* in icon:visibility_off[set material] *FLÜSTERN*. +
+|Du kannst Nachrichten flüstern, damit diese nur intern und _nicht_ für deine Kontakte sichtbar sind. Klicke dazu auf icon:visibility[set=material]. Du erkennst eine geflüsterte Nachricht in dieser Ansicht daran, dass die Schaltfläche icon:visibility_off[set=material, role=skyBlue] angezeigt wird. Außerdem ändert sich die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* in icon:visibility_off[set material] *FLÜSTERN*. +
 In der Übersicht werden geflüsterte Nachrichten in _kursiver Schrift_ dargestellt. +
 *_Hinweis:_* Sobald der Flüstermodus für diese Nachricht aktiviert ist, kann die Schaltfläche *Abrechnen* nicht mehr aktiviert werden.
 
@@ -240,7 +242,7 @@ Konversation im Messenger suchen:
 |Filter |Erläuterung
 
 | *Betreff*
-|Gib ein Wort ein, um nach Konversationen zu suchen, die die diesen Begriff im Betreff enthalten.
+|Gib ein Wort ein, um nach Konversationen zu suchen, die diesen Begriff im Betreff enthalten.
 
 | *Abgekürzte ID*
 |Gib die ID der Konversation ein, um nach der Konversation mit genau dieser ID zu suchen.
@@ -378,7 +380,7 @@ In der Messenger-Übersicht stehen dir über das Kontextmenü in der Zeile der K
 
 [[image-messenger-context-menu-overview]]
 .Konversation über das Kontextmenü bearbeiten
-image::messenger-context-menu-overview.png[width=640, height=360]
+image::crm:messenger-context-menu-overview.png[width=640, height=360]
 
 * <<#kontextmenue-konversation-als-gelesen-ungelesen-markieren, Konversation als gelesen / ungelesen markieren>>
 * <<#kontextmenue-tags-konversation, Tags einer Konversation zuweisen>>
@@ -579,7 +581,7 @@ Das <<#kontextmenue, Kontextmenü für die Konversationen>> hast du weiter oben 
 
 [[image-messenger-edit-single-message]]
 .Einzelne Nachricht über das Kontextmenü bearbeiten
-image::messenger-edit-single-message.png[width=640, height=360]
+image::crm:messenger-edit-single-message.png[width=640, height=360]
 
 [#einzelne-nachricht-oeffnen]
 === Nachricht öffnen
@@ -629,7 +631,7 @@ Sobald du eine Nachricht in der Übersicht markiert hast (icon:check_box[set=mat
 
 [[image-messenger-group-functions-conversations]]
 .Gruppenfunktion in der Übersicht
-image::messenger-group-functions-conversations.png[width=640, height=360]
+image::crm:messenger-group-functions-conversations.png[width=640, height=360]
 
 [[table-group-functions-messenger]]
 .Gruppenfunktion im Messenger nutzen
