--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -676,6 +676,8 @@
 
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
+* xref:changelog:may-2022.adoc[Changelogs Mai 2022]
+** xref:changelog:2022-05-04.adoc[Changelog 04. Mai 2022]
 * xref:changelog:april-2022.adoc[Changelogs April 2022]
 ** xref:changelog:2022-04-27.adoc[Changelog 27. April 2022]
 ** xref:changelog:2022-04-20.adoc[Changelog 20. April 2022]
