--- a/docs/de-de/modules/_includes/pages/search-introduction.adoc
+++ b/docs/de-de/modules/_includes/pages/search-introduction.adoc
@@ -1,14 +1,17 @@
 ////
 Die Tabelle mit den Filtern ist nicht in dieser include-Datei enthalten. Diese muss manuell hinzugefügt werden.
+
+Beispiel für _:search-for-certain-singular:_ eine bestimmte Firma / einen bestimmten Artikel
 ////
 
 :menu-path:
+:search-for-certain-singular:
 :search-for-singular:
 :search-for-plural:
 :value:
 :table-filter:
 
-Um einen bestimmten {search-for-singular} zu suchen, gibst du die dir bekannten Suchbegriffe in die Filter ein. Es ist auch möglich, mehrere Suchbegriffe gleichzeitig in die Suchfelder einzugeben. Dies ermöglicht eine schnellere und genauere Suche.
+Um {search-for-certain-singular} zu suchen, gibst du die dir bekannten Suchbegriffe in die Filter ein. Es ist auch möglich, mehrere Suchbegriffe gleichzeitig in die Suchfelder einzugeben. Dies ermöglicht eine schnellere und genauere Suche.
 
 [.instruction]
 {search-for-singular} suchen:
@@ -19,5 +22,3 @@ Um einen bestimmten {search-for-singular} zu suchen, gibst du die dir bekannten 
 Klicke dann auf icon:search[set=material], um die Suche auszuführen.
 .. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen. Beachte die Erläuterungen zu den Filtern in {table-filter}. +
 → Die gefundenen {search-for-plural} werden angezeigt.
-
-Wenn du eine Suche ausführst, werden deine gewählten Filter oben als Chips angezeigt. Diese Chips kannst du speichern, um sie in Zukunft schneller und einfacher wieder verwenden zu können.
