--- a/docs/de-de/modules/daten/partials/catalogue-first-contact.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-first-contact.adoc
@@ -39,6 +39,7 @@ image::daten:catalogue-overview-navigation.png[]
 * icon:reload[set=plenty] = Wendet die Filtereinstellungen an und reduziert die Liste auf die Kataloge, auf die die Filter zutreffen.
 * icon:reload[set=plenty] = Setzt die Filterung zurück, so dass wieder alle Kataloge angezeigt werden.
 
+////
 [.collapseBox]
 .Welche Filter gibt es?
 --
@@ -51,7 +52,6 @@ image::daten:catalogue-overview-navigation.png[]
 ! *Name*
 ! Reduziert die Liste auf Kataloge mit diesem Namen. 
 
-//////
 ! *Template-Typ*
 ! Reduziert die Liste auf Kataloge dieses Template-Typs. 
 
@@ -75,9 +75,9 @@ image::daten:catalogue-overview-navigation.png[]
 
 ! *Aktualisierungsdatum bis*
 ! Reduziert die Liste auf Kataloge, die bis zu diesem Datum aktualisiert wurden.
-//////
 !===
 --
+////
 |===
 
 [#overview-toolbar]
@@ -406,5 +406,5 @@ Bevor du das erste Feld zugeordnet hast, siehst du hier weit und breit nur icon:
 
 image:daten:catalogue-market-plenty-fields.png[]
 
-*_Tipp:_* Im Screenshot wurden schon ein paar Felder zugeordnet.
+*_Tipp:_* Im Screenshot wurde schon ein Feld zugeordnet.
 endif::marketplace-export[]
