--- a/docs/de-de/modules/daten/partials/catalogue-first-contact.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-first-contact.adoc
@@ -1,5 +1,5 @@
 
-Du beschäftigst dich zum ersten Mal mit den Katalogen für den Dateiexport? Dann bist du hier richtig. Mache dich mit der Katalogübersicht und dem Katalogmenü vertraut, bevor du loslegst und selbst Kataloge erstellst.
+Du beschäftigst dich zum ersten Mal mit den Katalogen? Dann bist du hier richtig. Mache dich mit der Katalogübersicht und dem Katalogmenü vertraut, bevor du loslegst und selbst Kataloge erstellst.
 
 [#catalogue-overview]
 === Katalogübersicht verstehen
